examples/test/testpolicy13281.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13281
  namespace: namespace101
spec:
  podSelector:
    matchLabels:
      key23: value47
      key19: value33
      key2: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key47: value5
          key1: value49
      podSelector:
        matchLabels:
          key4: value6
          key23: value36
          key5: value29
